square jumps up and down, no bugs, now to implement slight pause after ascension and before descension

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,7 +22,8 @@
   left: 350px;
   width: 75px;
   height: 75px;
-  border: .5px solid slateblue;
+  border: .5px solid white;
+  border-radius: 50%;
 }
 
 .jump-button {
